fix: fix show password user admin
