# docs/swagger.json
@@ -3045,6 +3045,9 @@
                         "$ref": "#/definitions/models.ProgramDb"
                     }
                 },
+                "request_id": {
+                    "type": "string"
+                },
                 "success": {
                     "type": "boolean"
                 },
@@ -3053,6 +3056,9 @@
                     "items": {
                         "$ref": "#/definitions/models.TaskWithDetailsDb"
                     }
+                },
+                "timestamp": {
+                    "type": "string"
                 }
             }
         },
@@ -3233,6 +3239,15 @@
                 "message": {
                     "type": "string"
                 },
+                "request_id": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                },
+                "timestamp": {
+                    "type": "string"
+                },
                 "token": {
                     "type": "string"
                 }
@@ -3256,11 +3271,20 @@
             "type": "object",
             "properties": {
                 "data": {},
+                "message": {
+                    "type": "string"
+                },
                 "pagination": {
                     "$ref": "#/definitions/models.PaginationResponse"
                 },
+                "request_id": {
+                    "type": "string"
+                },
                 "success": {
                     "type": "boolean"
+                },
+                "timestamp": {
+                    "type": "string"
                 }
             }
         },
